--- a/src/lib/reset.css
+++ b/src/lib/reset.css
@@ -3,52 +3,53 @@
 	background: none;
 	border-spacing: 0;
 	border-collapse: collapse;
-	font-family: sans-serif;
-	font-weight: 400;
-	font-size: 1rem;
+	font-family: inherit;
+	font-weight: inherit;
+	font-size: inherit;
 	padding: 0;
 	margin: 0;
 }
 
-.hrg-table__container nav {
+.hrg-table__nav {
 	display: flex;
 	align-items: center;
 	gap: 0.5rem;
 }
 
-.hrg-table__container table {
+.hrg-table {
 	display: grid;
 	border-collapse: collapse;
 	min-width: 100%;
 	grid-template-columns: repeat(var(--cols-length), auto);
 }
 
-.hrg-table__container :where(thead, tbody, tr) {
+.hrg-table__tbody,
+.hrg-table__thead,
+.hrg-table__tr,
+.hrg-table__thead-tr {
 	display: contents;
 }
 
-.hrg-table__container td {
+.hrg-table__td {
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
 }
 
-.hrg-table__container button {
+.hrg-table__th-btn,
+.hrg-table__nav-btn {
 	background: transparent;
 	border: none;
 	display: flex;
 	align-items: center;
 	gap: 0.5rem;
 }
-.hrg-table__container th {
+
+.hrg-table__th {
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
 	position: sticky;
 	top: 0;
 	text-align: left;
-}
-
-.hrg-table__container tbody {
-	height: var(--height);
 }
